--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.5.5"
+    "@astrojs/svelte": "^7.0.8",
+    "@tailwindcss/vite": "^4.0.17",
+    "astro": "^5.5.5",
+    "svelte": "^5.25.3",
+    "tailwindcss": "^4.0.17",
+    "typescript": "^5.8.2"
   }
 }
